--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <div>
-        <section>
-          <h1>Effective Solutions for Your Business</h1>
-          <button type="button">Order Service</button>
-        </section>
-      </div>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
+
       <section>
         <!-- hidden title -->
         <h2>Features</h2>
@@ -64,6 +63,7 @@
           </li>
         </ul>
       </section>
+
       <section>
         <h2>What are we doing</h2>
         <ul>
